--- a/repasoExamen.ipynb
+++ b/repasoExamen.ipynb
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 118,
    "id": "70ab1982-4415-45af-94c4-aeacb7cc9546",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 119,
    "id": "7b794a21-8e60-4dcd-85e8-9a0a66c5b208",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 120,
    "id": "4e2cb7e8-db53-4db5-8949-25a5cff0544f",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
      "output_type": "stream",
      "text": [
       "Reinitialized existing Git repository in C:/Users/RICARDO/REPASO EXAMEN/.git/\n",
-      "[main e11ae3c] first commit\n",
+      "[main d2e636f] first commit\n",
       " 1 file changed, 1 insertion(+)\n"
      ]
     },
@@ -1023,23 +1023,111 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elrichardev/repasoExamenPCD.git\n",
-      "   c8de1ad..e11ae3c  main -> main\n"
+      "   8b41a6e..d2e636f  main -> main\n"
      ]
     }
    ],
    "source": [
-    "!echo \"# repasoExamenPCD\" >> README.md\n",
+    "!echo \"# repoPrueba\" >> README.md\n",
     "!git init\n",
     "!git add README.md\n",
     "!git commit -m \"first commit\"\n",
-    "!git remote add origin https://github.com/elrichardev/repasoExamenPCD.git\n",
+    "!git branch -M main\n",
+    "!git remote add origin https://github.com/elrichardev/repoPrueba.git\n",
     "!git push -u origin main\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "e9125b8e-ef9f-46de-90ca-f1caacfa28d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   repasoExamen.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "23bff07e-d795-405c-8f55-c7382b20fede",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: LF will be replaced by CRLF in repasoExamen.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "2a80a859-ce23-4126-a433-6bc0746eff7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes to be committed:\n",
+      "  (use \"git restore --staged <file>...\" to unstage)\n",
+      "\tmodified:   repasoExamen.ipynb\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "4f0cf0db-2e10-4969-ab74-f1019745f70b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19875fa9-a908-4f61-9737-555c04f04f8e",
    "metadata": {},
    "outputs": [],
    "source": []
